added account settings.

--- a/QuantifyThisAndroid/res/xml/pref_notifications.xml
+++ b/QuantifyThisAndroid/res/xml/pref_notifications.xml
@@ -14,7 +14,7 @@
 	    android:title="@string/pref_notifications_agenda_mode_title" />
 	
 	<ListPreference
-	    android:defaultValue="digiGreen"
+	    android:defaultValue="0"
 	    android:entries="@array/array_notifications_amount_strings"
 	    android:entryValues="@array/array_notifications_amount_integers"
 	    android:key="pref_key_notifications_amount"
