--- a/QuantifyThisAndroid/res/layout/fragment_mark_mood.xml
+++ b/QuantifyThisAndroid/res/layout/fragment_mark_mood.xml
@@ -1,126 +1,165 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/RelativeLayout1"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center_horizontal"
-    android:orientation="vertical" >
+              android:id="@+id/RelativeLayout1"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:gravity="center_horizontal"
+              android:orientation="vertical">
+    <TableLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+        <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="fill_parent"
+                android:gravity="center"
+                android:orientation="horizontal">
+            <TextView
+                    android:id="@+id/textView1"
+                    android:layout_width="wrap_content"
+                    android:layout_weight=".15"
+                    android:layout_height="wrap_content"
+                    android:gravity="left"
+                    android:paddingLeft="20dp"
+                    android:text="@string/mood_label_1"
+                    android:textAppearance="?android:attr/textAppearanceMedium"/>
+
+            <SeekBar
+                    android:id="@+id/seekBar1"
+                    android:layout_weight=".80"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+            <TextView
+                    android:id="@+id/seekbar1_label"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="0%"
+                    android:layout_weight=".05"
+                    android:textAppearance="?android:attr/textAppearanceSmall"/>
+        </TableRow>
+        <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="fill_parent"
+                android:gravity="left"
+                android:orientation="horizontal">
+            <TextView
+                    android:id="@+id/textView2"
+                    android:layout_width="wrap_content"
+                    android:layout_weight=".15"
+                    android:layout_height="wrap_content"
+                    android:gravity="left"
+                    android:paddingLeft="20dp"
+                    android:text="@string/mood_label_2"
+                    android:textAppearance="?android:attr/textAppearanceMedium"/>
+            <SeekBar
+                    android:id="@+id/seekBar2"
+                    android:layout_width="wrap_content"
+                    android:layout_weight=".80"
+                    android:layout_height="wrap_content"/>
+            <TextView
+                    android:id="@+id/seekbar2_label"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight=".05"
+                    android:text="0%"
+                    android:textAppearance="?android:attr/textAppearanceSmall"/>
+        </TableRow>
+        <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="fill_parent"
+                android:gravity="left"
+                android:orientation="horizontal">
+            <TextView
+                    android:id="@+id/textView3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight=".15"
+                    android:gravity="left"
+                    android:paddingLeft="20dp"
+                    android:text="@string/mood_label_3"
+                    android:textAppearance="?android:attr/textAppearanceMedium"/>
+
+            <SeekBar
+                    android:id="@+id/seekBar3"
+                    android:layout_width="wrap_content"
+                    android:layout_weight=".80"
+                    android:layout_height="wrap_content"/>
+            <TextView
+                    android:id="@+id/seekbar3_label"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight=".05"
+                    android:text="0%"
+                    android:textAppearance="?android:attr/textAppearanceSmall"/>
+        </TableRow>
+        <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="fill_parent"
+                android:gravity="left"
+                android:orientation="horizontal">
+            <TextView
+                    android:id="@+id/textView4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight=".15"
+                    android:gravity="left"
+                    android:paddingLeft="20dp"
+                    android:text="@string/mood_label_4"
+                    android:textAppearance="?android:attr/textAppearanceMedium"/>
+
+            <SeekBar
+                    android:id="@+id/seekBar4"
+                    android:layout_width="wrap_content"
+                    android:layout_weight=".80"
+                    android:layout_height="wrap_content"/>
+            <TextView
+                    android:id="@+id/seekbar4_label"
+                    android:layout_width="wrap_content"
+                    android:layout_weight=".05"
+                    android:layout_height="wrap_content"
+                    android:text="0%"
+                    android:textAppearance="?android:attr/textAppearanceSmall"/>
+        </TableRow>
+        <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="fill_parent"
+                android:gravity="left"
+                android:orientation="horizontal">
+            <TextView
+                    android:id="@+id/textView5"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight=".15"
+                    android:gravity="left"
+                    android:paddingLeft="20dp"
+                    android:text="@string/mood_label_5"
+                    android:textAppearance="?android:attr/textAppearanceMedium"/>
+
+            <SeekBar
+                    android:id="@+id/seekBar5"
+                    android:layout_width="wrap_content"
+                    android:layout_weight=".80"
+                    android:layout_height="wrap_content"/>
+            <TextView
+                    android:id="@+id/seekbar5_label"
+                    android:layout_width="wrap_content"
+                    android:layout_weight=".05"
+                    android:layout_height="wrap_content"
+                    android:text="0%"
+                    android:textAppearance="?android:attr/textAppearanceSmall"/>
+        </TableRow>
+    </TableLayout>
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:gravity="center"
-        android:orientation="vertical" >
-
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:text="@string/mood_label_1"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
-
-    <SeekBar
-        android:id="@+id/seekBar1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-     <TextView
-            android:id="@+id/seekbar1_label"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="0%"
-            android:textAppearance="?android:attr/textAppearanceSmall" />
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:text="@string/mood_label_2"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
-    
-
-    <SeekBar
-        android:id="@+id/seekBar2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-    <TextView
-            android:id="@+id/seekbar2_label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="0%"
-            android:textAppearance="?android:attr/textAppearanceSmall" />
-
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:text="@string/mood_label_3"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
-
-    <SeekBar
-        android:id="@+id/seekBar3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-    <TextView
-            android:id="@+id/seekbar3_label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="0%"
-            android:textAppearance="?android:attr/textAppearanceSmall" />
-
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:text="@string/mood_label_4"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
-
-    <SeekBar
-        android:id="@+id/seekBar4"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-    <TextView
-            android:id="@+id/seekbar4_label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="0%"
-            android:textAppearance="?android:attr/textAppearanceSmall" />
-
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:text="@string/mood_label_5"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
-
-    <SeekBar
-        android:id="@+id/seekBar5"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-    <TextView
-            android:id="@+id/seekbar5_label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="0%"
-            android:textAppearance="?android:attr/textAppearanceSmall" />
-
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="vertical" >
+            android:gravity="center"
+            android:orientation="vertical">
 
         <Button
-            android:id="@+id/button1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/margin_bottom_mark_button"
-            android:text="@string/button_mark_mood_label" />
+                android:id="@+id/button1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/margin_bottom_mark_button"
+                android:text="@string/button_mark_mood_label"/>
 
     </LinearLayout>
 
