--- a/QuantifyThisAndroid/res/layout/fragment_sleep.xml
+++ b/QuantifyThisAndroid/res/layout/fragment_sleep.xml
@@ -63,7 +63,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/margin_bottom_mark_button"
-            android:text="@string/button_mark_mood_label" />
+            android:text="@string/button_done"/>
 
     </LinearLayout>
 
