--- a/QuantifyThisAndroid/res/layout/fragment_heart_rate.xml
+++ b/QuantifyThisAndroid/res/layout/fragment_heart_rate.xml
@@ -18,12 +18,6 @@
                 android:padding="@dimen/padding_large"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:text="@string/shake_instructions"/>
-       <!-- <ImageView
-                android:id="@+id/imageView1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:scaleType="fitCenter"
-                android:src="@drawable/heart"/>-->
         <LinearLayout
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
@@ -35,7 +29,8 @@
                     android:textSize="125dp"
                     android:layout_weight=".75"
                     android:gravity="right"
-                    android:text="90"/>
+                    android:text="0"
+                    android:id="@+id/bpm_label"/>
             <TextView
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
